<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mixsoft.unpavote.Comprobante"
    tools:ignore="MissingPrefix"
    >
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        >
        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_txt_titulo"
            android:textSize="@dimen/sp_30"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_20"
            fontPath="fonts/Existence.ttf"
            />
    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="5"
        >
        <TableLayout
            android:id="@+id/tabla_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:stretchColumns="1"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            >
            <TextView
                android:id="@+id/tv_legajo"
                android:text="@string/com_txt_legajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_10"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_dni"
                android:text="@string/com_txt_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_10"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_apellido"
                android:text="@string/com_txt_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_10"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_nombre"
                android:text="@string/com_txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_10"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_claustro"
                android:text="@string/com_txt_claustro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_15"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_cargo_carrera"
                android:text="@string/com_txt_cargo_carrera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_15"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_transaccion"
                android:text="@string/com_txt_transaccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_15"
                fontPath="fonts/Existence.ttf"
                />
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|top"
        android:padding="@dimen/dp_15"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/tv_descripcion"
            android:text="@string/com_txt_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_20"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/dp_15"
            fontPath="fonts/Existence.ttf"
            />
        <Button
            android:id="@+id/btn_reenviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_btn"
            fontPath="fonts/Existence.ttf"
            />
    </LinearLayout>

</LinearLayout>