<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_15"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="2"
    tools:context=".Login"
    tools:ignore="MissingPrefix"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/dp_10"
        >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_logo_unpa"
        android:contentDescription="@string/login_img_unpa"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_20"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_titulo"
            android:textSize="@dimen/sp_25"
            android:layout_gravity="center"
            fontPath="fonts/Existence.ttf"
            />
        <EditText
            android:id="@+id/et_ele_legajo"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_ele_legajo"
            android:maxLength="13"
            fontPath="fonts/Existence.ttf"
            />
        <EditText
            android:id="@+id/et_ele_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_ele_pass"
            android:maxLength="16"
            fontPath="fonts/Existence.ttf"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            fontPath="fonts/Existence.ttf"
            />
        <TextView
            android:id="@+id/tv_forg_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_forg_pass"
            android:textSize="@dimen/sp_15"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:textColor="@color/azul_link"
            />
    </LinearLayout>
</LinearLayout>