<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mixsoft.unpavote.Contrasena"
    android:orientation="vertical"
    tools:ignore="MissingPrefix"
    >
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:gravity="center|top"
        android:padding="@dimen/dp_15"
        >
        <TextView
            android:id="@+id/tv_titulo"
            android:text="@string/con_txt_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_30"
            android:textAlignment="center"
            fontPath="fonts/Existence.ttf"
            />
        <TextView
            android:id="@+id/tv_descripcion"
            android:text="@string/con_txt_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_20"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            fontPath="fonts/Existence.ttf"
            />
        <EditText
            android:id="@+id/et_pass_actual"
            android:inputType="textPassword"
            android:hint="@string/con_hint_actual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="16"
            fontPath="fonts/Existence.ttf"
            />
        <EditText
            android:id="@+id/et_pass_nueva"
            android:inputType="textPassword"
            android:hint="@string/con_hint_nueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:maxLength="16"
            fontPath="fonts/Existence.ttf"
            />
        <EditText
            android:id="@+id/et_pass_repetir_nueva"
            android:inputType="textPassword"
            android:hint="@string/con_hint_repetir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="16"
            fontPath="fonts/Existence.ttf"
            />
        <Button
            android:id="@+id/btn_actualizar_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/con_btn_actualizar"
            android:layout_marginTop="@dimen/dp_30"
            fontPath="fonts/Existence.ttf"
            />
    </LinearLayout>

</LinearLayout>