<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    tools:context="com.mixsoft.unpavote.Usuario"
    tools:ignore="MissingPrefix"
    android:weightSum="7"
    >
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        >
        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usu_txt_titulo"
            android:textSize="@dimen/sp_30"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_20"
            fontPath="fonts/Existence.ttf"
            />
    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="5"
        >
        <TableLayout
            android:id="@+id/tabla_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:stretchColumns="1"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            >
            <TextView
                android:id="@+id/tv_nombre"
                android:text="@string/usu_txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_10"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_apellido"
                android:text="@string/usu_txt_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_10"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_legajo"
                android:text="@string/usu_txt_legajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_10"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_claustro"
                android:text="@string/usu_txt_claustro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_10"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_cargo_carrera"
                android:text="@string/usu_txt_cargo_carrera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_15"
                fontPath="fonts/Existence.ttf"
                />
            <TextView
                android:id="@+id/tv_email"
                android:text="@string/usu_txt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_15"
                fontPath="fonts/Existence.ttf"
                />
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        >
        <Button
            android:id="@+id/btn_contrasena"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/usu_btn_contraseña"
            android:background="@color/celeste_claro"
            android:textColor="@color/blanco"
            android:textSize="@dimen/sp_25"
            style="?android:attr/borderlessButtonStyle"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        >
        <Button
            android:id="@+id/btn_pin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/usu_btn_pin"
            android:background="@color/turquesa_medio"
            android:textColor="@color/blanco"
            android:textSize="@dimen/sp_25"
            style="?android:attr/borderlessButtonStyle"
            />
    </LinearLayout>
</LinearLayout>