<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mixsoft.unpavote.Contrasena"
    tools:ignore="MissingPrefix"
    android:orientation="vertical"
    >
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_30"
            android:gravity="center_horizontal"
            fontPath="fonts/Existence.ttf"
            />
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_ver"
            android:textSize="@dimen/sp_20"
            android:gravity="center_horizontal"
            fontPath="fonts/Existence.ttf"
            />
        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:gravity="center_horizontal"
            android:src="@drawable/img_logo_unpa"
            android:contentDescription="@string/login_img_unpa"
            android:layout_marginTop="@dimen/sp_25"
            android:layout_marginBottom="@dimen/sp_25"
            />
        <TextView
            android:id="@+id/tv_licencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ace_txt_licencia"
            android:textSize="@dimen/sp_20"
            android:gravity="center_horizontal"
            fontPath="fonts/Existence.ttf"
            />
    </LinearLayout>
</LinearLayout>