<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    tools:context="com.mixsoft.unpavote.Pin"
    tools:ignore="MissingPrefix"
    >
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:gravity="center|top"
        android:padding="@dimen/dp_15"
        >
        <TextView
            android:id="@+id/tv_titulo"
            android:text="@string/pin_txt_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_30"
            fontPath="fonts/Existence.ttf"
            />
        <TextView
            android:id="@+id/tv_descripcion"
            android:text="@string/pin_txt_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_20"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            fontPath="fonts/Existence.ttf"
            />
        <Button
            android:id="@+id/btn_generar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_btn_generar"
            android:layout_marginTop="@dimen/dp_30"
            fontPath="fonts/Existence.ttf"
            />
        <Button
            android:id="@+id/btn_reenviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_btn_reenviar"
            android:layout_marginTop="@dimen/dp_30"
            fontPath="fonts/Existence.ttf"
            />
    </LinearLayout>


</LinearLayout>